# predict-eth-data-sources

./: Dockerfile  README.md  pyproject.toml
app/: app.py  config.py  constants.py
app/routers/: data.py  health_check.py
app/services/: data.py  transpose.py
app/services/queries/: contract_addresses.sql  gas_price.sql  liquidity.sql  swaps_volume.sql
