[tool.poetry]
name = "exchange-data-provider"
version = "0.1.0"
description = "Data provider for cryptocurrency predict"
authors = ["Jaime Delgado <jfdelgad@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
aiodns = "3.0.0"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
anyio = "3.6.2"
async-timeout = "4.0.2"
attrs = "22.2.0"
ccxt = "2.9.9"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.0.1"
click = "8.1.3"
cryptography = "39.0.1"
fastapi = "0.92.0"
frozenlist = "1.3.3"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
multidict = "6.0.4"
numpy = "1.24.2"
pandas = "1.5.3"
pycares = "4.3.0"
pycparser = "2.21"
pydantic = "1.10.5"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2022.7.1"
pyyaml = "6.0"
requests = "2.28.2"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.25.0"
transpose-data = "3.1.2"
typing-extensions = "4.5.0"
urllib3 = "1.26.14"
uvicorn = "0.20.0"
uvloop = "0.17.0"
watchfiles = "0.18.1"
websockets = "10.4"
yarl = "1.8.2"
jinja2 = "^3.1.2"
retry = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
